clusters/lab/photon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photon
  namespace: photon
spec:
  selector:
    app.kubernetes.io/name: photon
  ports:
    - name: http
      port: 2322
      targetPort: http
